<resources>
    <string name="app_name">OnlineStore</string>
    <string name="select_color">Select color</string>
    <string name="select_capacity">Select capacity</string>
    <string name="related_products">Products related to this item</string>
    <string name="description">Description</string>
    <string name="details">Details</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="btn_login">Log in</string>
    <string name="registration">registration</string>
    <string name="title_registration">Registration</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_password">Enter_password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="e_mail">E-mail</string>
    <string name="register">Register</string>
    <string name="question">Already Registered?</string>
    <string name="skip_login">skip login</string>
    <string name="card_holder">Card holder name</string>
    <string name="card_number">*Card number</string>
    <string name="expiration_date">*Expiration date</string>
    <string name="cvv">*CVV</string>
    <string name="add_card">Add Card</string>
    <string name="date">%1d/%2d/%3d</string>
    <string name="my_cart">My Cart</string>
    <string name="way_of_delivery">Way of Delivery</string>
    <string name="pickup">Pickup</string>
    <string name="delivery">Delivery</string>
    <string name="add_address">Add address</string>
    <string name="date_and_time">Date and time</string>
    <string name="add_data">Add data</string>
    <string name="payment">Payment</string>
    <string name="credit_or_debit_card">Credit or debit card</string>
    <string name="cash_payment">Cash payment</string>
    <string name="total_sum">Total Sum</string>
    <string name="free">Free</string>
    <string name="checkout">Checkout</string>
    <string name="success">Success!</string>
    <string name="your_order_is_completed">Your order is completed</string>
    <string name="ok">OK</string>
    <string name="user_name">User name</string>
    <string name="personal_information">Personal Information</string>
    <string name="history_of_orders">History of orders</string>
    <string name="online_store">Online Store</string>
    <string name="catalog">Catalog</string>
    <string name="search">Search</string>
    <string name="best_sales">Best Sales</string>
    <string name="specifications">Specifications</string>
    <string name="online_store_name">Smart \nBuy</string>
    <string name="see_more">see more</string>
    <string name="hot_sales">Hot Sales</string>
    <string name="select_category">Select Category</string>
    <string name="bishkek">Bishkek</string>
    <string name="iphone_12">Iphone 12</string>
    <string name="s_per_mega_r_pido">Súper.Mega.Rápido.</string>
    <string name="buy_now">Buy now!</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="log_out">Log out</string>
</resources>